# pgrag

./: .gitignore  COMPILE.sh  Cargo.toml  LICENSE  README.md  notes.md
extensions/rag/: Cargo.toml  rag.control
extensions/rag/src/: chunk.rs  fireworks.rs  lib.rs  pdf.rs
extensions/rag_bge_small_en_v15/: Cargo.toml  rag_bge_small_en_v15.control
extensions/rag_bge_small_en_v15/src/: lib.rs
extensions/rag_embed_bge_small_en_v15/: Cargo.toml  rag_embed_bge_small_en_v15.control
extensions/rag_embed_bge_small_en_v15/src/: errors.rs  lib.rs
extensions/rag_jina_reranker_v1_tiny_en/: rag_jina_reranker_v1_tiny_en.control
extensions/rag_jina_reranker_v1_tiny_en/src/: errors.rs  lib.rs
extensions/rag_rerank_jina_v1_tiny_en/: Cargo.toml  rag_rerank_jina_v1_tiny_en.control
extensions/rag_rerank_jina_v1_tiny_en/src/: chunk.rs  docx.rs  errors.rs  json_api.rs  lib.rs
exts/rag/: Cargo.toml  checks.sql  rag.control
exts/rag/src/: anthropic.rs  chunk.rs  errors.rs  fireworks.rs  json_api.rs  lib.rs  markdown.rs  openai.rs  pdf.rs  voyageai.rs
exts/rag/test_res/: test.docx
exts/rag_bge_small_en_v15/: COMPILE.sh  Cargo.toml  README  README.md  bindgen_pmsignal.h  build.rs  checks.sql  rag_bge_small_en_v15.control  signature_check.c
exts/rag_bge_small_en_v15/.cargo/: config.toml
exts/rag_bge_small_en_v15/proto/: embeddings.proto
exts/rag_bge_small_en_v15/src/: chunk.rs  errors.rs  lib.rs  mconst.rs  util.rs
exts/rag_jina_reranker_v1_tiny_en/: Cargo.toml  build.rs  checks.sql  rag_jina_reranker_v1_tiny_en.control
exts/rag_jina_reranker_v1_tiny_en/.cargo/: config.toml
exts/rag_jina_reranker_v1_tiny_en/proto/: reranking.proto
exts/rag_jina_reranker_v1_tiny_en/src/: lib.rs
lib/ort-2.0.0-d7b5b17-patched/: Cargo.toml
lib/ort-2.0.0-d7b5b17-patched/src/execution_providers/: mod.rs
lib/ort-2.0.0-rc.4/.github/workflows/: code-quality.yml
lib/ort-2.0.0-rc.4/docs/: package.json  pnpm-lock.yaml
lib/ort-2.0.0-rc.4/ort-sys/src/internal/: dirs.rs
lib/ort-2.0.0-rc.4/src/: util.rs
lib/ort-2.0.0-rc.4/src/training/: trainer.rs
lib/ort-2.0.0-rc.6-87dc4f2/ort-sys/: build.rs
lib/ort-2.0.0-rc.6-87dc4f2/ort-sys/src/internal/: dirs.rs
src/: chunk.rs  docx.rs  errors.rs  fireworks.rs  lib.rs  markdown.rs  md.rs  openai.rs  pdf.rs
test_res/: test.pages
