[package]
name = "rag_embed_bge_small_en_v15"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_rag_embed_bge_small_en_v15"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
fastembed = "3.10.0"
pgrx = "0.12.5"

[patch.crates-io]
ort = { path = "../../lib/ort-2.0.0-rc.4" }
ort-sys = { path = "../../lib/ort-2.0.0-rc.4/ort-sys" }

[dev-dependencies]
pgrx-tests = "0.12.5"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
