[package]
name = "rag_jina_reranker_v1_tiny_en"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_rag_jina_reranker_v1_tiny_en"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []
remote_onnx = []

[dependencies]
fastembed = "=3.14.1"
pgrx = "0.12.6"
tonic = "0.12.3"
prost = "0.13.3"
tokio = "1.40.0"
tokio-stream = "0.1.16"
tower = "0.5.1"
hyper-util = "0.1.9"
rayon = "1.10.0"
reqwest = "0.12.8"

[patch.crates-io]
# fixing both crates to rc.4 prevents build issues
ort = { path = "../../lib/ort-2.0.0-rc.4" }
ort-sys = { path = "../../lib/ort-2.0.0-rc.4/ort-sys" }

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
pgrx-tests = "0.12.6"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
